--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="telefone">
           <h5>Site por Kei Ogawa</h5>
           <p>Telefone para Contato:</p>
-          <a href=”tel:+5511960618146″ target="_blank">
+          <a href="tel:+5511960618146" target="_blank">
           <button class="cssbuttons-io-button">
             (11) 96061-8146
           <div class="icon">
