--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <main>
     <header class="caixa-principal" id="home">
         <nav>
-            <h2 class="portfolio">Port<span>folio</span></h2>
-            <ul>
+            <a href="/" class="logo">
+              <h2 class="portfolio">Port<span>folio</span></h2>
+            </a>
+            <ul class="nav-list">
                 <li><a class="link-menu" href="#home">Home</a></li>
                 <li><a class="link-menu" href="#sobre">Sobre</a></li>
                 <li><a class="link-menu" href="#projetos">Projetos</a></li>
