--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main>
     <header class="caixa-principal" id="header">
-        <nav>
+        <nav id="navbar">
             <a href="#home" class="logo">
               <h2 class="portfolio">Port<span>folio</span></h2>
             </a>
