--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             </ul>
         </nav>
 
+        <section id="home">
         <div class="container"> 
             <div class="chamada-info">
                 <h1><span class="ola">OLÁ, EU SOU O KEI</span> <br>  <span class="dev">DESENVOLVEDOR <br> FRONT END </b></span></h1>
@@ -52,6 +53,7 @@
             <div class="chamada-logo">
                 <img src="./src/img/banner.jpg" alt="Foto do Banner">
             </div>
+          </section>
             
     </header>
 
